@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-04-26T08:22:16Z",
-  "count" : 1,
-  "count_minmax" : [ 1, 1 ],
-  "count_decinc" : [ -0, +1 ],
-  "uniques" : 1,
-  "uniques_minmax" : [ 1, 1 ],
-  "uniques_decinc" : [ -0, +1 ]
+  "timestamp" : "2024-04-27T01:16:18Z",
+  "count" : 9,
+  "count_minmax" : [ 1, 9 ],
+  "count_decinc" : [ -0, +9 ],
+  "uniques" : 8,
+  "uniques_minmax" : [ 1, 8 ],
+  "uniques_decinc" : [ -0, +8 ]
 }
