@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-04-26T16:23:46Z",
+  "timestamp" : "2024-04-27T01:16:18Z",
   "count_outdated" : 4053,
   "uniques_outdated" : 1897,
-  "count" : 4076,
-  "uniques" : 1916,
+  "count" : 4085,
+  "uniques" : 1924,
   "clones" : [
     {
       "timestamp": "2024-04-13T00:00:00Z",
@@ -67,6 +67,15 @@
       "uniques": 10,
       "uniques_minmax": [ 10, 10 ],
       "uniques_decinc": [ 0, 10 ]
+    },
+    {
+      "timestamp": "2024-04-26T00:00:00Z",
+      "count": 9,
+      "count_minmax": [ 1, 9 ],
+      "count_decinc": [ 0, 9 ],
+      "uniques": 8,
+      "uniques_minmax": [ 1, 8 ],
+      "uniques_decinc": [ 0, 8 ]
     }
   ]
 }
