@@ -1,6 +1,6 @@
 {
-  "count": 23,
-  "uniques": 15,
+  "count": 32,
+  "uniques": 21,
   "clones": [
     {
       "timestamp": "2024-04-13T00:00:00Z",
@@ -36,6 +36,11 @@
       "timestamp": "2024-04-24T00:00:00Z",
       "count": 13,
       "uniques": 10
+    },
+    {
+      "timestamp": "2024-04-26T00:00:00Z",
+      "count": 9,
+      "uniques": 8
     }
   ]
 }
